Finished 2 services and fixed bugs
Fixed abstractions.
Implemented link parser service.
Implemented details parser service

--- a/JobsParser.DetailParserService/appsettings.json
+++ b/JobsParser.DetailParserService/appsettings.json
@@ -1,21 +1,29 @@
 {
   "DatabaseSettings": {
-    "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=JobsParser;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=JobsParser;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
     "Timeout": 30
   },
   "RabbitSettings": {
     "HostName": "localhost"
   },
-  "Parsers": [
+  "Websites": [
     {
-      "Name": "Pracuj",
+      "Name": "pracuj",
+      "SiteUrl": "www.pracuj.pl",
       "SearchUrls": [
-        "https://it.pracuj.pl/praca/praca%20zdalna;wm,home-office?et=17%2C4&its=backend&itth=39%2C75",
-        "https://it.pracuj.pl/praca/praca%20zdalna;wm,home-office?et=17%2C4&its=backend&itth=39%2C75%2C36"
-      ]
+        "https://it.pracuj.pl/praca/praca%20zdalna;wm,home-office?et=4%2C17&its=backend&itth=75%2C39" //c# junior remote
+        //"https://it.pracuj.pl/praca?et=4%2C1%2C17&itth=75%2C39", //c# mid
+        //"https://it.pracuj.pl/praca?itth=75%2C39" //.net, c#
+      ],
+      "LinkParserOptions": {
+        "Type": "pagination",
+        "ItemSelector": "//a[@data-test='link-offer']",
+        "NextPageButtonSelector": "//button[@data-test='bottom-pagination-button-next']",
+        "ClickWhenLoadedSelector": "//div[@data-test-location='multiple']" //optional
+      },
+      "DetailParserOptions": {
+        "Type": "pracuj"
+      }
     }
-  ],
-  "ParserMappings": {
-    "it.pracuj.pl": "PlaywrightAutomation.Parsers.PracujParser"
-  }
+  ]
 }
