--- a/JobsParser.LinkParserService/appsettings.json
+++ b/JobsParser.LinkParserService/appsettings.json
@@ -4,25 +4,43 @@
     "Timeout": 30
   },
   "RabbitSettings": {
-    "HostName": "localhost"
+    "HostName": "localhost",
+    "EnableRetries": true,
+    "RetryDelayMs": 21600000,
+    "MaxRetries": 3,
+    "RetryExchange": "delayed_ex",
+    "RetryQueue": "retry_dlq",
+    "FailedQueue": "failed_dlq",
+    "LinksQueue": "details_parser.links"
   },
   "Websites": [
     {
       "Name": "pracuj",
       "SiteUrl": "www.pracuj.pl",
       "SearchUrls": [
-        "https://it.pracuj.pl/praca/praca%20zdalna;wm,home-office?et=4%2C17&its=backend&itth=75%2C39" //c# junior remote
-        //"https://it.pracuj.pl/praca?et=4%2C1%2C17&itth=75%2C39", //c# mid
-        //"https://it.pracuj.pl/praca?itth=75%2C39" //.net, c#
+        "https://it.pracuj.pl/praca/praca%20zdalna;wm,home-office?et=4%2C17&its=backend&itth=75%2C39"
       ],
       "LinkParserOptions": {
         "Type": "pagination",
         "ItemSelector": "//a[@data-test='link-offer']",
         "NextPageButtonSelector": "//button[@data-test='bottom-pagination-button-next']",
-        "ClickWhenLoadedSelector": "//div[@data-test-location='multiple']" //optional
+        "ClickWhenLoadedSelector": "//div[@data-test-location='multiple']"
       },
       "DetailParserOptions": {
-        "Type": "pracuj"
+        "Type": "json",
+        "JsonScriptSelector": "//script[@id='__NEXT_DATA__']",
+        "TitleSelector": "$.props.pageProps.dehydratedState.queries[0].state.data.attributes.jobTitle",
+        "DescriptionSelector": "combination:$.props.pageProps.dehydratedState.queries[0].state.data.textSections[?(@.sectionType == 'responsibilities')].textElements[*];$.props.pageProps.dehydratedState.queries[0].state.data.textSections[?(@.sectionType == 'requirements-expected')].textElements[*]",
+        "LocationSelector": "$.props.pageProps.dehydratedState.queries[0].state.data.attributes.workplaces[0].displayAddress",
+        "EmployerNameSelector": "$.props.pageProps.dehydratedState.queries[0].state.data.attributes.displayEmployerName",
+        "WorkModeSelector": "$.props.pageProps.dehydratedState.queries[0].state.data.attributes.employment.workModes[0].pracujPlName",
+        "PositionLevelSelector": "$.props.pageProps.dehydratedState.queries[0].state.data.attributes.employment.positionLevels[0].pracujPlName",
+        "TechnologiesSelector": "$.props.pageProps.dehydratedState.queries[0].state.data.secondaryAttributes[?(@.code == 'it-technologies-highlighted')].model.items[*].name",
+        "ContractTypeSelector": "$.props.pageProps.dehydratedState.queries[0].state.data.attributes.employment.typesOfContract[0].pracujPlName",
+        "MinSalarySelector": "$.props.pageProps.dehydratedState.queries[0].state.data.attributes.employment.typesOfContract[0].salary.from",
+        "MaxSalarySelector": "$.props.pageProps.dehydratedState.queries[0].state.data.attributes.employment.typesOfContract[0].salary.to",
+        "CurrencySelector": "$.props.pageProps.dehydratedState.queries[0].state.data.attributes.employment.typesOfContract[0].salary.currency.code",
+        "TimeUnitSelector": "$.props.pageProps.dehydratedState.queries[0].state.data.attributes.employment.typesOfContract[0].salary.timeUnit.longForm.name"
       }
     }
   ]
