--- a/JobsParser.LinkParserService/appsettings.json
+++ b/JobsParser.LinkParserService/appsettings.json
@@ -18,7 +18,7 @@
       "Name": "pracuj",
       "SiteUrl": "www.pracuj.pl",
       "SearchUrls": [
-        "https://it.pracuj.pl/praca/praca%20zdalna;wm,home-office?et=4%2C17&its=backend&itth=75%2C39"
+        "https://it.pracuj.pl/praca/praca%20zdalna;wm,home-office?et=17&tc=2&ws=0&its=backend"
       ],
       "LinkParserOptions": {
         "Type": "pagination",
@@ -30,7 +30,8 @@
         "Type": "json",
         "JsonScriptSelector": "//script[@id='__NEXT_DATA__']",
         "TitleSelector": "$.props.pageProps.dehydratedState.queries[0].state.data.attributes.jobTitle",
-        "DescriptionSelector": "combination:$.props.pageProps.dehydratedState.queries[0].state.data.textSections[?(@.sectionType == 'responsibilities')].textElements[*];$.props.pageProps.dehydratedState.queries[0].state.data.textSections[?(@.sectionType == 'requirements-expected')].textElements[*]",
+        "RequirementsSelector": "$.props.pageProps.dehydratedState.queries[0].state.data.textSections[?(@.sectionType == 'requirements')].plainText",
+        "ResponsibilitiesSelector": "$.props.pageProps.dehydratedState.queries[0].state.data.textSections[?(@.sectionType == 'responsibilities')].plainText",
         "LocationSelector": "$.props.pageProps.dehydratedState.queries[0].state.data.attributes.workplaces[0].displayAddress",
         "EmployerNameSelector": "$.props.pageProps.dehydratedState.queries[0].state.data.attributes.displayEmployerName",
         "WorkModeSelector": "$.props.pageProps.dehydratedState.queries[0].state.data.attributes.employment.workModes[0].pracujPlName",
