Added http 429 error handling for detail parsing service

--- a/JobsParser.DetailParserService/appsettings.json
+++ b/JobsParser.DetailParserService/appsettings.json
@@ -6,12 +6,16 @@
   "RabbitSettings": {
     "HostName": "localhost",
     "EnableRetries": true,
-    "RetryDelayMs": 21600000,
-    "MaxRetries": 3,
+    "RetryDelayMinutes": 180,
+    "MaxRetries": 5,
     "RetryExchange": "delayed_ex",
     "RetryQueue": "retry_dlq",
     "FailedQueue": "failed_dlq",
     "LinksQueue": "details_parser.links"
+  },
+  "DetailParserServiceSettings": {
+    "MaxAttempts": 4,
+    "InitialDelayHours": 1
   },
   "Websites": [
     {
