--- a/JobsParser.LinkParserService/appsettings.json
+++ b/JobsParser.LinkParserService/appsettings.json
@@ -14,15 +14,20 @@
     "LinksQueue": "details_parser.links"
   },
   "DetailParserServiceSettings": {
-    "MaxAttempts": 4,
-    "InitialDelayHours": 1
+    "MaxRetryAttempts": 4,
+    "InitialRetryDelayHours": 1
+  },
+  "LinkParserServiceSettings": {
+    "ExecutionIntervalHours": 4,
+    "MaxRetryAttempts": 4,
+    "InitialRetryDelayHours": 1
   },
   "Websites": [
     {
       "Name": "pracuj",
       "SiteUrl": "www.pracuj.pl",
       "SearchUrls": [
-        "https://it.pracuj.pl/praca/praca%20zdalna;wm,home-office?et=17&tc=2&ws=0&its=backend"
+        "https://it.pracuj.pl/praca?itth=75%2C39%2C36"
       ],
       "LinkParserOptions": {
         "Type": "pagination",
