Added FillForm command

--- a/JobsParser.AutoApplyService/appsettings.Development.json
+++ b/JobsParser.AutoApplyService/appsettings.Development.json
@@ -5,22 +5,26 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=JobsParserDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "DatabaseSettings": {
+    "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=JobsParser;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "Timeout": 30
   },
-  "AutoApplyService": {
-    "PollingIntervalSeconds": 30,
-    "WorkflowsDirectory": "Workflows",
+  "AutoApplyOptions": {
+    "PollingIntervalSeconds": 60,
+    "WorkflowsDirectory": "Data\\Workflows",
+    "FormsDirectory": "Data\\Configurations",
     "MaxConcurrentInstances": 1,
-    "Headless": false,
     "DefaultResumePath": "C:\\Path\\To\\Your\\Resume.pdf",
     "DefaultCoverLetterPath": "C:\\Path\\To\\Your\\CoverLetter.pdf",
-    "ActionDelayMs": 1000,
-    "DefaultTimeoutMs": 60000,
-    "AutoProcessNewLinks": true,
-    "CookiesDirectory": "Cookies",
+    "ActionDelayMs": 500,
+    "DefaultTimeoutMs": 30000,
+    "AutoProcessNewLinks": true
+  },
+  "PlaywrightOptions": {
+    "CookiesDirectory": "Data\\Cookies",
     "UseSavedCookies": true,
     "UserAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36",
-    "BrowserChannel": "chrome"
+    "BrowserChannel": "chrome",
+    "Headless": false
   }
 }
