--- a/JobsParser.AutoApplyService/appsettings.json
+++ b/JobsParser.AutoApplyService/appsettings.json
@@ -12,8 +12,8 @@
   "AutoApplyOptions": {
     "PollingIntervalSeconds": 60,
     "WorkflowsDirectory": "Data\\Workflows",
-    "FormsDirectory": "Forms",
-    "MaxConcurrentInstances": 2,
+    "FormsDirectory": "Data\\Configurations",
+    "MaxConcurrentInstances": 1,
     "DefaultResumePath": "C:\\Path\\To\\Your\\Resume.pdf",
     "DefaultCoverLetterPath": "C:\\Path\\To\\Your\\CoverLetter.pdf",
     "ActionDelayMs": 500,
