--- a/JobsParser.LinkParserService/appsettings.json
+++ b/JobsParser.LinkParserService/appsettings.json
@@ -27,11 +27,13 @@
       "Name": "pracuj",
       "SiteUrl": "www.pracuj.pl",
       "SearchUrls": [
-        "https://it.pracuj.pl/praca?itth=75%2C39%2C36"
+        //"https://it.pracuj.pl/praca?itth=75%2C39%2C36"
+        "https://it.pracuj.pl/praca?its=backend&itth=39"
       ],
       "LinkParserOptions": {
         "Type": "pagination",
         "ItemSelector": "//a[@data-test='link-offer']",
+        "RemoveQuery": "true",
         "NextPageButtonSelector": "//button[@data-test='bottom-pagination-button-next']",
         "ClickWhenLoadedSelector": "//div[@data-test-location='multiple']"
       },
