Removed unused code

--- a/JobsParser.AutoApplyService/appsettings.json
+++ b/JobsParser.AutoApplyService/appsettings.json
@@ -10,15 +10,12 @@
     "Timeout": 30
   },
   "AutoApplyOptions": {
-    "PollingIntervalSeconds": 60,
+    "MaxConcurrentInstances": 2,
+    "PollingIntervalSeconds": 30,
     "WorkflowsDirectory": "Data\\Workflows",
     "FormsDirectory": "Data\\Configurations",
-    "MaxConcurrentInstances": 1,
     "DefaultResumePath": "C:\\Path\\To\\Your\\Resume.pdf",
-    "DefaultCoverLetterPath": "C:\\Path\\To\\Your\\CoverLetter.pdf",
-    "ActionDelayMs": 500,
-    "DefaultTimeoutMs": 30000,
-    "AutoProcessNewLinks": true
+    "DefaultCoverLetterPath": "C:\\Path\\To\\Your\\CoverLetter.pdf"
   },
   "PlaywrightOptions": {
     "CookiesDirectory": "Data\\Cookies",
